Migration Welcome and shared modules +styles +i18n

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,3 +1,6 @@
-<p>
-  navbar works!
-</p>
+<div class="navbar">
+  <app-button class="button_navbar">Descr 1</app-button>
+  <app-button class="button_navbar">Descr 2</app-button>
+  <app-button class="button_navbar">Descr 3</app-button>
+  <app-button class="button_navbar">Descr 4</app-button>
+</div>
