--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -1,11 +1,11 @@
 <div class="page">
-  <div class="page-header">
+  <div class="page__header">
     <app-header></app-header>
   </div>
-  <div class="page-body">
+  <div class="page__body">
     <router-outlet></router-outlet>
   </div>
-  <div class="page-footer">
+  <div class="page__footer">
     <app-footer></app-footer>
   </div>
 </div>
