--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,3 +1,11 @@
-<p>
-  header works!
-</p>
+<div class="header">
+  <div class="container">
+    <div class="header__wrapper">
+      <div class="header__logo">LOGOLOGOLOGO</div>
+      <div class="header__box">
+        <app-navbar></app-navbar>
+        <div class="header__user">PROFILE</div>
+      </div>
+    </div>
+  </div>
+</div>
