--- a/src/app/features/pdf-edit/components/pdf-items-sidebar/pdf-items-sidebar.component.html
+++ b/src/app/features/pdf-edit/components/pdf-items-sidebar/pdf-items-sidebar.component.html
@@ -1,3 +1,13 @@
-<p>
-  pdf-items-sidebar works!
-</p>
+  <div class="pdf-items-sidebar">
+    <app-select
+    [name]="'PDF.SIDEBAR.IMAGES'"
+    [addItemText]="'PDF.BUTTON.ADD_TEXT'"
+    [items]="imageItems"
+    ></app-select>
+    <app-select
+    [name]="'PDF.SIDEBAR.TEXT'"
+    [addItemText]="'PDF.BUTTON.ADD_IMAGE'"
+    [items]="textItems"
+    ></app-select>
+    <app-button>Add Image</app-button>
+  </div>
