--- a/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
+++ b/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
@@ -1,3 +1,6 @@
-<p>
-  pdf-edit-page works!
-</p>
+<div>
+  <app-pdf-items-sidebar
+  ></app-pdf-items-sidebar>
+  <app-add-image-popup
+  ></app-add-image-popup>
+</div>
