--- a/src/styles/partials/_total.scss
+++ b/src/styles/partials/_total.scss
@@ -4,3 +4,6 @@
 @import './header';
 @import './navbar';
 @import './button';
+@import './item';
+@import './select';
+@import './pdf-items-sidebar';
