Completed migration + pdf-edit store

--- a/src/app/features/pdf-edit/components/pdf-items-sidebar/pdf-items-sidebar.component.html
+++ b/src/app/features/pdf-edit/components/pdf-items-sidebar/pdf-items-sidebar.component.html
@@ -1,13 +1,15 @@
-  <div class="pdf-items-sidebar">
-    <app-select
+<div class="pdf-items-sidebar">
+  <app-select
     [name]="'PDF.SIDEBAR.IMAGES'"
     [addItemText]="'PDF.BUTTON.ADD_TEXT'"
-    [items]="imageItems"
-    ></app-select>
-    <app-select
+    [items]="textItems"
+    (deleteItemEvent)="deleteTextItem($event)"
+  ></app-select>
+  <app-select
     [name]="'PDF.SIDEBAR.TEXT'"
     [addItemText]="'PDF.BUTTON.ADD_IMAGE'"
-    [items]="textItems"
-    ></app-select>
-    <app-button>Add Image</app-button>
-  </div>
+    [items]="imageItems"
+    (deleteItemEvent)="deleteImageItem($event)"
+  ></app-select>
+  <app-button>Add Image</app-button>
+</div>
