--- a/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
+++ b/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
@@ -1,6 +1,7 @@
 <div>
   <app-pdf-items-sidebar
+    [textItems]="textItems"
+    [imageItems]="imageItems"
   ></app-pdf-items-sidebar>
-  <app-add-image-popup
-  ></app-add-image-popup>
+  <app-add-image-popup></app-add-image-popup>
 </div>
