--- a/src/app/shared/components/item/item.component.html
+++ b/src/app/shared/components/item/item.component.html
@@ -2,16 +2,18 @@
   <div class="item__header">
       <h4 class="item__header-text">{{ item.name }}</h4>
       <div class="item__header-buttons">
-          <button class="item__header-button item__header-button--trash" (click)="deleteItem">
-              <!-- <fa :icon="['fa', 'trash']" size="lg" /> -->
+          <button class="item__header-button item__header-button--trash" (click)="deleteItem()">
+            <fa-icon [icon]="['fas', 'trash']" size="lg"></fa-icon>
           </button>
-          <button class="item__header-button item__header-button--chevron" (click)="toggleItem">
-              <!-- <fa v-if="item.isHidden" :icon="['fa', 'chevron-down']" size="lg" />
-              <fa v-else :icon="['fa', 'chevron-up']" size="lg" /> -->
+          <button class="item__header-button item__header-button--chevron" (click)="toggleItem()">
+            <fa-icon *ngIf="item.isHidden; else chevronUp" [icon]="['fas', 'chevron-down']" size="lg"></fa-icon>
+            <ng-template #chevronUp>
+              <fa-icon [icon]="['fas', 'chevron-up']" size="lg"></fa-icon>
+            </ng-template>          
           </button>
       </div>
   </div>
-  <div class="item__body" :hidden="item.isHidden">
+  <div class="item__body" [hidden]="item.isHidden">
       <div class="item__body-property">
           <p class="item__body-property-name"> {{ "PDF.ITEM.X" | translate }} </p>
           <input class="item__body-property-value" type="number" [(ngModel)]="item.xPos"/>
@@ -24,11 +26,11 @@
           <p class="item__body-property-name"> {{ "PDF.ITEM.ROTATION" | translate }} </p>
           <input class="item__body-property-value" type="number" [(ngModel)]="item.rotation"/>
       </div>
-      <div class="item__body-property" *ngIf="isTextItem">
+      <div class="item__body-property" *ngIf="isTextItem(item)">
           <p class="item__body-property-name"> {{ "PDF.ITEM.FONT_SIZE" | translate }} </p>
           <input class="item__body-property-value" type="number" [(ngModel)]="$any(item).fontSize"/>
       </div>
-      <div class="item__body-property" *ngIf="isImageItem">
+      <div class="item__body-property" *ngIf="isImageItem(item)">
           <p class="item__body-property-name"> {{ "PDF.ITEM.OPACITY" | translate }} </p>
           <input class="item__body-property-value" type="number" [(ngModel)]="$any(item).opacity"/>
       </div>
