--- a/src/app/features/pdf-edit/components/pdf-editor-view/pdf-editor-view.component.html
+++ b/src/app/features/pdf-edit/components/pdf-editor-view/pdf-editor-view.component.html
@@ -1,1 +1,26 @@
-<canvas id="the-canvas"></canvas>
+<div class="view">
+    <div class="view__navbar">
+        <div class="view__navbar-page-container">
+            <app-button (click)="prevPage()">Prev</app-button>
+            <span style="color: white;">Page: <span style="color: white;" id="page_num"></span></span>
+            <app-button (click)="nextPage()">Next</app-button>
+        </div>
+        <div class="view__navbar-button-container">
+            <app-button (click)="zoomOut()">ZoomOut</app-button>
+            <span style="color: white;">Scale: <span style="color: white;"> {{ pdfScale }} </span></span>
+            <app-button (click)="zoomIn()">ZoomIn</app-button>
+
+        </div>
+    </div>
+    <div class="view__document">
+        <div class="container_1">
+            <canvas  #myCanvas id="myCanvas"></canvas>
+            <canvas  #drawCanvas id="drawCanvas"
+                (pointerdown)="handleMouseDown($event)"
+                (pointermove)="handleMouseMove($event)"
+                (pointerout)="handleMouseOut($event)"
+                (pointerup)="handleMouseUp($event)"
+            ></canvas>
+        </div>
+    </div>
+</div>
