--- a/src/styles/partials/_total.scss
+++ b/src/styles/partials/_total.scss
@@ -6,5 +6,6 @@
 @import './button';
 @import './item';
 @import './select';
+@import './view';
 @import './edit-page';
 @import './pdf-items-sidebar';
