--- a/src/styles/partials/_total.scss
+++ b/src/styles/partials/_total.scss
@@ -7,5 +7,6 @@
 @import './item';
 @import './select';
 @import './view';
+@import './shared';
 @import './edit-page';
 @import './pdf-items-sidebar';
