--- a/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
+++ b/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
@@ -2,15 +2,23 @@
   <app-pdf-items-sidebar class="edit-page__sidebar"
     [textItems]="textItems"
     [imageItems]="imageItems"
+    [selectedPageImages]="selectedPageImages"
     (documentUploadedEvent)="convertToBase64($event)"
-    (addImageEvent)="addImage()"
+    (addImageTestEvent)="addTestImage()"
+    (addImageEvent)="openAddImagePopup()"
   ></app-pdf-items-sidebar>
 
   <app-pdf-editor-view class="edit-page__editor"
     [textItems]="textItems"
     [imageItems]="imageItems"
+    [selectedPageImages]="selectedPageImages"
     [pageNum]="pageNum"
+    (updateSelectedImageItems)="updateSelectedItems()"
+    (setPageNumEvent)="pageChanged($event)"
   ></app-pdf-editor-view>
 </div>
 
-<!-- <app-add-image-popup></app-add-image-popup> -->
+<app-add-image-popup *ngIf="addImagePopupVisible"
+  (closePopupEvent)="closeAddImagePopup()"
+  (confirmPopupEvent)="addImageFromPopup($event)"
+></app-add-image-popup>
