JWT Auth + Refresh token

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
       <div class="header__logo">LOGOLOGOLOGO</div>
       <div class="header__box">
         <app-navbar></app-navbar>
-        <div class="header__user">PROFILE</div>
+        <div class="header__user">{{authenticatedUser.displayName}}</div>
       </div>
     </div>
   </div>
