--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -2,5 +2,5 @@
   <app-button class="button_navbar">Descr 1</app-button>
   <app-button class="button_navbar">Descr 2</app-button>
   <app-button class="button_navbar">Descr 3</app-button>
-  <app-button class="button_navbar">Descr 4</app-button>
+  <app-button class="button_navbar" (click)="logOut()">Log out</app-button>
 </div>
