--- a/src/app/features/welcome/components/welcome-landing/welcome-landing.component.html
+++ b/src/app/features/welcome/components/welcome-landing/welcome-landing.component.html
@@ -1,7 +1,7 @@
 <div class="welcome-page">
   <div class="container">
     <h1 class="welcome-page__header">
-      {{ "WELCOME.HEADER" | translate }}
+      <!-- {{ "WELCOME.HEADER" | translate }} -->
     </h1>
     <p class="welcome-page__subheader">
       {{ "WELCOME.SUBHEADER" | translate }}
