--- a/src/styles/partials/_total.scss
+++ b/src/styles/partials/_total.scss
@@ -8,5 +8,6 @@
 @import './select';
 @import './view';
 @import './shared';
+@import './auth';
 @import './edit-page';
 @import './pdf-items-sidebar';
