--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -1,6 +1,6 @@
 <div class="page">
   <div class="page__header">
-    <app-header></app-header>
+    <app-header [authenticatedUser]="authenticatedUser"></app-header>
   </div>
   <div class="page__body">
     <router-outlet></router-outlet>
