--- a/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
+++ b/src/app/features/pdf-edit/pages/pdf-edit-page/pdf-edit-page.component.html
@@ -4,7 +4,7 @@
     [imageItems]="imageItems"
     [selectedPageImages]="selectedPageImages"
     (documentUploadedEvent)="convertToBase64($event)"
-    (addImageTestEvent)="addTestImage()"
+    (saveChangesEvent)="saveChanges()"
     (addImageEvent)="openAddImagePopup()"
   ></app-pdf-items-sidebar>
 
