--- a/src/app/features/explorer/components/explorer-projects/explorer-projects.component.html
+++ b/src/app/features/explorer/components/explorer-projects/explorer-projects.component.html
@@ -1,5 +1,6 @@
 <div class="project-items">
   <app-project-item class="project-item" *ngFor="let project of projects"
-  [project]="project"
+  [project]="project" 
+  (openProjectEvent)="openProjectById($event)"
   ></app-project-item>
 </div>
