--- a/src/app/features/pdf-edit/components/pdf-editor-view/pdf-editor-view.component.scss
+++ b/src/app/features/pdf-edit/components/pdf-editor-view/pdf-editor-view.component.scss
@@ -21,3 +21,12 @@
 img {
     cursor: pointer;
 }
+
+
+.loader-container {
+    width: 100%;
+    height: calc(100vh - 55px - 60px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
