--- a/src/app/features/pdf-edit/components/pdf-editor-view/pdf-editor-view.component.html
+++ b/src/app/features/pdf-edit/components/pdf-editor-view/pdf-editor-view.component.html
@@ -5,13 +5,16 @@
             <span style="color: white;">Page: <span style="color: white;" id="page_num"></span></span>
             <app-button (click)="nextPage()">Next</app-button>
         </div>
-        <div class="view__navbar-button-container">
+        <!-- <div class="view__navbar-button-container">
             <app-button (click)="zoomOut()">ZoomOut</app-button>
             <span style="color: white;">Scale: <span style="color: white;"> {{ pdfScale }} </span></span>
             <app-button (click)="zoomIn()">ZoomIn</app-button>
-        </div>
+        </div> -->
         <div class="view__navbar-page-container">
             <app-button (click)="printDocument()">Print document</app-button>
+        </div>
+        <div class="view__navbar-page-container">
+            <app-button (click)="printCode()">Print code</app-button>
         </div>
     </div>
     <div class="view__document">
