--- a/src/app/features/pdf-edit/components/pdf-items-sidebar/pdf-items-sidebar.component.html
+++ b/src/app/features/pdf-edit/components/pdf-items-sidebar/pdf-items-sidebar.component.html
@@ -3,13 +3,13 @@
     <fa-icon [icon]="['fas', 'arrow-left-long']"></fa-icon>
   </app-button>
   <app-button (click)="saveChanges()">Save Changes</app-button>
-
+<!-- 
   <app-select
     [name]="'PDF.SIDEBAR.TEXT'"
     [addItemText]="'PDF.BUTTON.ADD_TEXT'"
     [items]="textItems"
     (deleteItemEvent)="deleteTextItem($event)"
-  ></app-select>
+  ></app-select> -->
   <app-select
     [name]="'PDF.SIDEBAR.IMAGES'"
     [addItemText]="'PDF.BUTTON.ADD_IMAGE'"
