--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="container">
     <div class="header__wrapper">
-      <div class="header__logo">LOGOLOGOLOGO</div>
+      <div class="header__logo">PdfSharp-online</div>
       <div class="header__box">
         <app-navbar></app-navbar>
         <div class="header__user">{{authenticatedUser.displayName}}</div>
